Added heading and text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <p>&amp; Hello world. This is my first website!</p>
-  <p>Instructions: rewrite this page by adding a few sentences about yourself. Add a heading. Post it to your basecamp</p>
+  <h1> A few sentences about myself</h1>
+  <p>My name is Oscar Garcia. I am a third year student at IIT majoring in ITM. I work part-time as a data analyst for a nonprofit. I look forward to learning more tools and skills to enhance my employability and get a great first full-time job.</p>
 </body>
 </html>
-© 2020 GitHub, Inc.
